bindings/sml/src/lib_proven.sml


  val colorParseHex_raw =
    _import "proven_color_parse_hex" public : Word8.word vector * Word64.word -> MLton.Pointer.t;
  val colorToHex =
    _import "proven_color_to_hex" public : Word8.word * Word8.word * Word8.word -> Int32.int * MLton.Pointer.t * Word64.word;

  (* ---- SafeHeader -------------------------------------------------------- *)

  val headerHasCrlf =
    _import "proven_header_has_crlf" public : Word8.word vector * Word64.word -> Int32.int * bool;
  val headerIsValidName =
    _import "proven_header_is_valid_name" public : Word8.word vector * Word64.word -> Int32.int * bool;
  val headerIsDangerous =
    _import "proven_header_is_dangerous" public : Word8.word vector * Word64.word -> Int32.int * bool;
  val headerRender =
    _import "proven_header_render" public :
      Word8.word vector * Word64.word * Word8.word vector * Word64.word -> Int32.int * MLton.Pointer.t * Word64.word;

  (* ---- SafeHttp ---------------------------------------------------------- *)

  val httpUrlEncode =
    _import "proven_http_url_encode" public : Word8.word vector * Word64.word -> Int32.int * MLton.Pointer.t * Word64.word;
  val httpUrlDecode =
    _import "proven_http_url_decode" public : Word8.word vector * Word64.word -> Int32.int * MLton.Pointer.t * Word64.word;

  (* ---- SafeCalculator ---------------------------------------------------- *)

  val calculatorEval =
    _import "proven_calculator_eval" public : Word8.word vector * Word64.word -> Int32.int * Real64.real;

  (* ---- SafeAngle --------------------------------------------------------- *)

  val angleDegToRad =
    _import "proven_angle_deg_to_rad" public : Real64.real -> Real64.real;
  val angleRadToDeg =
    _import "proven_angle_rad_to_deg" public : Real64.real -> Real64.real;
  val angleNormalizeDegrees =
    _import "proven_angle_normalize_degrees" public : Real64.real -> Real64.real;
  val angleNormalizeRadians =
    _import "proven_angle_normalize_radians" public : Real64.real -> Real64.real;

  (* ---- SafeProbability --------------------------------------------------- *)

  val probabilityCreate =
    _import "proven_probability_create" public : Real64.real -> Real64.real;
  val probabilityAnd =
    _import "proven_probability_and" public : Real64.real * Real64.real -> Real64.real;
  val probabilityOrExclusive =
    _import "proven_probability_or_exclusive" public : Real64.real * Real64.real -> Real64.real;
  val probabilityNot =
    _import "proven_probability_not" public : Real64.real -> Real64.real;

  (* ---- SafeML (activation functions) ------------------------------------- *)

  val mlSigmoid =
    _import "proven_ml_sigmoid" public : Real64.real -> Real64.real;
  val mlRelu =
    _import "proven_ml_relu" public : Real64.real -> Real64.real;
  val mlLeakyRelu =
    _import "proven_ml_leaky_relu" public : Real64.real * Real64.real -> Real64.real;
  val mlClamp =
    _import "proven_ml_clamp" public : Real64.real * Real64.real * Real64.real -> Real64.real;

  (* ---- SafePassword ------------------------------------------------------ *)

  val passwordValidate_raw =
    _import "proven_password_validate" public : Word8.word vector * Word64.word -> MLton.Pointer.t;
  val passwordIsCommon =
    _import "proven_password_is_common" public : Word8.word vector * Word64.word -> bool;

  (* ---- SafeVersion ------------------------------------------------------- *)

  val versionParse_raw =
    _import "proven_version_parse" public : Word8.word vector * Word64.word -> MLton.Pointer.t;
  val versionCompare_raw =
    _import "proven_version_compare" public : MLton.Pointer.t * MLton.Pointer.t -> Int32.int;
  val versionFree =
    _import "proven_version_free" public : MLton.Pointer.t -> unit;

  (* ---- SafeGeo ----------------------------------------------------------- *)

  val geoValidate =
    _import "proven_geo_validate" public : Real64.real * Real64.real -> MLton.Pointer.t;
  val geoDistance =
    _import "proven_geo_distance" public :
      Real64.real * Real64.real * Real64.real * Real64.real -> Int32.int * Real64.real;

  (* ---- SafeUnit ---------------------------------------------------------- *)

  val unitConvertLength =
    _import "proven_unit_convert_length" public : Real64.real * Int32.int * Int32.int -> Int32.int * Real64.real;
  val unitConvertTemp =
    _import "proven_unit_convert_temp" public : Real64.real * Int32.int * Int32.int -> Int32.int * Real64.real;

end

(* -------------------------------------------------------------------------- *)
(* Internal Marshaling Helpers                                                *)
(* -------------------------------------------------------------------------- *)

structure ProvenMarshal =
struct

  (* Convert an SML string to a Word8 vector suitable for passing as
   * const uint8_t* to C functions. *)
  fun stringToBytes (s : string) : Word8.word vector =
    Vector.tabulate (String.size s, fn i => Word8.fromInt (Char.ord (String.sub (s, i))))

  (* Get the length of a string as Word64 for the size_t parameter. *)
  fun stringLen (s : string) : Word64.word =
    Word64.fromInt (String.size s)

  (* Read a C string from an MLton.Pointer.t and length, then free it
   * via proven_free_string.  Returns the SML string. *)
  fun readAndFreeString (ptr : MLton.Pointer.t, len : Word64.word) : string =
    let
      val n = Word64.toInt len
      val s = CharVector.tabulate (n, fn i =>
        Char.chr (Word8.toInt (MLton.Pointer.getWord8 (ptr, i))))
    in
      LibProven.freeString ptr;
      s
    end

  (* Unwrap an int result tuple into SOME value or NONE. *)
  fun unwrapInt (status : Int32.int, value : Int64.int) : Int64.int option =
    if ProvenStatus.isOk status then SOME value else NONE

  (* Unwrap a bool result tuple into SOME value or NONE. *)
  fun unwrapBool (status : Int32.int, value : bool) : bool option =
    if ProvenStatus.isOk status then SOME value else NONE

  (* Unwrap a float result tuple into SOME value or NONE. *)
  fun unwrapFloat (status : Int32.int, value : Real64.real) : Real64.real option =
    if ProvenStatus.isOk status then SOME value else NONE

  (* Unwrap a string result tuple into SOME string or NONE.
   * Frees the C string on success. *)
  fun unwrapString (status : Int32.int, ptr : MLton.Pointer.t, len : Word64.word) : string option =
    if ProvenStatus.isOk status andalso ptr <> MLton.Pointer.null then
      SOME (readAndFreeString (ptr, len))
    else
      NONE

end
